<resources>
    <string name="app_name">H-Buddy</string>
    <string name="app_title">H-BUDDY</string>
    <string name="tagline">Rasakan Kesejukan Alami \n Herbal dalam Setiap Minumanmu</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_wrong">Oops.. something went wrong</string>

    //home page
    <string name="main_herbal_section">Tanaman Herbal</string>
    <string name="main_article_section">Artikel</string>
    <string name="article_cd_image">Gambar Artikel</string>
    <string name="carousel_cd_image">Herbal List Image</string>

    //detection page
    <string name="notes_title">Petunjuk</string>
    <string name="notes_body">Pastikan gambar jelas dengan pencahayaan baik dan latar belakang sederhana. Aplikasi akan memproses dan menampilkan hasil klasifikasi tanaman anda secara otomatis.</string>
    <string name="gallery_button">Galeri</string>
    <string name="button_camera">Kamera</string>
    <string name="detection_button">Deteksi</string>
    <string name="detection_header">Deteksi Tanaman</string>
    <string name="detection_cd_image">Tampilan Gambar</string>

    //result page
    <string name="result_cd_image_result">Image Result Preview</string>
    <string name="result_reference_title">Referensi</string>
    <string name="result_other_title">Tanaman Lainnya</string>
    <string name="result_benefit_title">Manfaat</string>
    <string name="result_content_title">Kandungan</string>
    <string name="result_description_title">Deskripsi dan Kandungan</string>


    //favorite page
    <string name="favorite_header">Favorit</string>
    <string name="tab_text1">Deteksi</string>
    <string name="tab_text2">Artikel</string>
    <string name="item_description">Description</string>
    <string name="item_title">Title</string>

    //profile page
    <string name="profile_header">Profil</string>
    <string name="profile_name">Username</string>
    <string name="about_button">Tentang kami</string>
    <string name="favorite_button">Favorit</string>
    <string name="logout_button">Logout</string>
    <string name="developer_team">Machine Learning \n 1. Dzakwan Ammar Aziz – Universitas Bengkulu \n 2. Syakira Az Zahra – Universitas Bengkulu \n 3. Vilda Aprilia – Universitas Bengkulu \n Cloud Computing \n 4. Lutfi Arief Noerjaman – Universitas Pendidikan Indonesia \n 5. Umar Abdul Aziz – Universitas Pendidikan Indonesia \n Mobile Development (Android) \n 6. Akhmad Bahasyim – Universitas Mulawarman \n 7. Muhammad Hedi Arsyan Fadillah – Universitas Pendidikan Indonesia</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="developer_team_title">Tim Pengembang</string>
    <string name="about_app_body">H-Buddy adalah sebuah aplikasi inovatif yang berfokus pada klasifikasi gambar tanaman herbal. Aplikasi ini dirancang untuk meningkatkan pemberdayaan tanaman herbal yang ada di sekitar kita, dengan tujuan memanfaatkan tanaman-tanaman tersebut sebagai konsumsi yang menyehatkan. H-Buddy memungkinkan pengguna untuk mengenali berbagai jenis tanaman herbal hanya dengan memotret tanaman tersebut. Saat ini, aplikasi H-Buddy dapat mengenali 10 jenis tanaman herbal, yaitu Asoka, Bunga Telang, Daun Jambu Biji, Daun Jarak, Daun Jeruk Nipis, Daun Kayu Putih, Daun Pepaya, Daun Sirih, Lidah Buaya, dan Semanggi. Dikembangkan sebagai bagian dari Capstone Project Bangkit Academy 2024 yang didukung oleh Google, GoTo, dan Traveloka, H-Buddy hadir untuk mempermudah masyarakat dalam mengenali dan memanfaatkan tanaman herbal di kehidupan sehari-hari, sehingga dapat mendukung gaya hidup sehat berbasis alam.</string>


</resources>