<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    tools:context=".ui.profil.AboutActivity">

    <ImageView
        android:id="@+id/iv_h_buddy"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/h_buddy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/TextAppearance.Material3.DisplayMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_title"
        android:textColor="@color/md_theme_primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_h_buddy"
        app:layout_constraintStart_toStartOf="@+id/iv_h_buddy"
        app:layout_constraintTop_toBottomOf="@+id/iv_h_buddy" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tv_app_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/md_theme_surfaceContainer"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/about_app"
                android:textColor="@color/md_theme_onSurface" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_body"
                android:textColor="@color/md_theme_outline" />

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/developer_team_title"
                android:textColor="@color/md_theme_onSurface" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer_team"
                android:textColor="@color/md_theme_outline" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>