<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="12dp"
    tools:context=".ui.profil.ProfileFragment">

    <TextView
        android:id="@+id/tv_header_profile"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_header"
        android:textColor="@color/md_theme_onSurface"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="77dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_profile"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name_profile"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_name"
        android:textAlignment="center"
        android:textColor="@color/md_theme_onSurface"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_picture" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_profile">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_darkmode"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mode gelap"
                android:clickable="false"
                android:textAlignment="viewStart"
                android:textColor="@color/md_theme_onSurface"
                app:icon="@drawable/ic_dark_mode"
                app:iconGravity="start"
                app:iconPadding="24dp"
                app:iconSize="24dp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/profile_darkmode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout
            >



        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_favorite"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_button"
            android:textAlignment="viewStart"
            android:textColor="@color/md_theme_onSurface"
            app:icon="@drawable/ic_favorite"
            app:iconGravity="start"
            app:iconPadding="24dp"
            app:iconSize="24dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_About"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_button"
            android:textAlignment="viewStart"
            android:textColor="@color/md_theme_onSurface"
            app:icon="@drawable/about"
            app:iconGravity="start"
            app:iconPadding="24dp"
            app:iconSize="24dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button_logout"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/logout_button"
        app:icon="@drawable/logout"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>